# Portfolio

./: README.md
Projects/FootballDatabaseAndAnalytics/: README.md
Projects/FootballDatabaseAndAnalytics/Analytics/: AnalyticsTooling.py  ClubAnalytics.ipynb  PlayerAnalytics.ipynb  playground.ipynb
Projects/FootballDatabaseAndAnalytics/Analytics/Tableau/: generate_csv_for_tableau.py
Projects/FootballDatabaseAndAnalytics/PythonCore/: DavidVilla.py
Projects/FootballDatabaseAndAnalytics/PythonCore/CountryDefinitions/: Countries.py  GeographicObjects.py  Regions.py
Projects/FootballDatabaseAndAnalytics/PythonCore/PlayerDefinitions/: CareerInfo.py  PlayerObject.py  RatingCalculation.py
Projects/FootballDatabaseAndAnalytics/PythonCore/SquadDefinitions/: CreateSquadTestingScript.py  FormationHandler.py  SquadBuilder.py  SquadSelector.py
Projects/FootballDatabaseAndAnalytics/Tools/: GetBestPlayerPerPosition.py  PlayerAmountPerCountry.py
Projects/FootballDatabaseAndAnalytics/Tools/GetPlayerDataFromExcel/: ExcelTooling.py  GetPlayerDataFromExcel.py  WritePlayerPyFile.py
Projects/MicrosoftIntroductionToC++Programming/Course2/Module4/WorkingWithExternalLibraries/: CMakeLists.txt  main.cpp
Projects/MicrosoftIntroductionToC++Programming/Course2/Module5/: CMakeLists.txt  concept.txt  input.json  main.cpp  output.txt
Projects/VinDecodingWebsite/: README.md
Projects/VinDecodingWebsite/Backend/: wsgi.py
Projects/VinDecodingWebsite/Backend/app/: __init__.py  config.py  routes.py
Projects/VinDecodingWebsite/Frontend/: index.html  style.css
(+114 files in other folders)
